kafka -> logstash -> elastic -> kibana pipe + tests working

--- a/logstash/logstash.conf
+++ b/logstash/logstash.conf
@@ -1,20 +1,40 @@
 input {
-  http {
-    port => 9600
+  kafka {
+    bootstrap_servers => "kafka:9092"
+    topics => ["bus","van","weather"]
   }
 }
 
 filter {
-  mutate {
-    add_field => { "timestamp" => "%{@timestamp}" }
+  json {
+    source => "message"
   }
 }
 
 output {
-  elasticsearch {
-    hosts => ["http://elasticsearch:9201"]
-    index => "index"
+  if "bus" in [message] {
+    elasticsearch {
+      hosts => ["http://elasticsearch:9200"]
+      index => "bus"
+    }
+  } else if "van" in [message] {
+    elasticsearch {
+      hosts => ["http://elasticsearch:9200"]
+      index => "van"
+    }
+  } else if "weather_station" in [message] {
+    elasticsearch {
+      hosts => ["http://elasticsearch:9200"]
+      index => "weather_station"
+    }
+  } else {
+    elasticsearch {
+      hosts => ["http://elasticsearch:9200"]
+      index => "default_topic"
+    }
   }
-  stdout { codec => rubydebug }
-}
 
+  stdout {
+    codec => rubydebug
+  }
+}
