--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,34 @@
 version: '3.6'
 services:
+  zookeeper:
+    image: confluentinc/cp-zookeeper:latest
+    container_name: zookeeper
+    environment:
+      ZOOKEEPER_CLIENT_PORT: 2181
+      ZOOKEEPER_TICK_TIME: 2000
+    ports:
+      - '2181:2181'
+    networks:
+      - elk
+
+
+  kafka:
+    image: confluentinc/cp-kafka:latest
+    container_name: kafka
+    depends_on:
+      - zookeeper
+    ports:
+      - '9092:9092'
+    environment:
+      KAFKA_BROKER_ID: 1
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092,PLAINTEXT_HOST://localhost:29092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+    networks:
+      - elk
+
   Elasticsearch:
     image: elasticsearch:7.16.2
     container_name: elasticsearch
@@ -21,7 +50,7 @@ services:
     restart: always
     volumes:
     - ./logstash/:/logstash_dir
-    command: logstash - /logstash_dir/logstash.conf 
+    command: logstash -f /logstash_dir/logstash.conf 
     depends_on:
       - Elasticsearch
     ports:
@@ -45,7 +74,7 @@ services:
       - elk
 
   Conf:                                                                         
-    image: debian:bullseye-slim                                                 
+    image: python:3.9
     container_name: conf                                                        
     depends_on:                                                                 
       - Kibana                                                                  
@@ -55,6 +84,18 @@ services:
     restart: "no"                                                               
     networks:                                                                   
       - elk     
+
+  test:
+    build:
+      context: ./tests
+    container_name: test
+    depends_on:
+      - kafka
+    volumes:
+      - ./tests:/app/tests
+    restart: "no"
+    networks:
+      - elk
 
 volumes:
   elastic_data: {}
