--- a/logstash/logstash.conf
+++ b/logstash/logstash.conf
@@ -16,21 +16,25 @@ output {
     elasticsearch {
       hosts => ["http://elasticsearch:9200"]
       index => "bus"
+      document_id => "%{bus_id}"
     }
   } else if "van" in [message] {
     elasticsearch {
       hosts => ["http://elasticsearch:9200"]
       index => "van"
+      document_id => "%{bus_id}"
     }
   } else if "weather_station" in [message] {
     elasticsearch {
       hosts => ["http://elasticsearch:9200"]
       index => "weather_station"
+      document_id => "%{bus_id}"
     }
   } else {
     elasticsearch {
       hosts => ["http://elasticsearch:9200"]
       index => "default_topic"
+      document_id => "%{bus_id}"
     }
   }
 
