--- a/tests/Dockerfile
+++ b/tests/Dockerfile
@@ -8,6 +8,8 @@ RUN apt-get install -y curl
 RUN pip install kafka-python
 RUN pip install elasticsearch
 RUN pip install requests
+RUN pip install protobuf
+RUN pip install gtfs-realtime-bindings
 
 CMD ["bash"]
 
