--- a/logstash/logstash.conf
+++ b/logstash/logstash.conf
@@ -1,7 +1,7 @@
 input {
   kafka {
     bootstrap_servers => "kafka:9092"
-    topics => ["bus","van","weather"]
+    topics => ["bus","van","stop"]
   }
 }
 
@@ -12,29 +12,28 @@ filter {
 }
 
 output {
-  if "bus" in [message] {
+  if [type] == "bus" {
     elasticsearch {
       hosts => ["http://elasticsearch:9200"]
       index => "bus"
-      document_id => "%{bus_id}"
+      document_id => "%{[bus_id]}"
     }
-  } else if "van" in [message] {
+  } else if [type] == "van"{
     elasticsearch {
       hosts => ["http://elasticsearch:9200"]
       index => "van"
-      document_id => "%{bus_id}"
+      document_id => "%{[van_id]}"
     }
-  } else if "weather_station" in [message] {
+  } else if [type] == "stop_station" {
     elasticsearch {
       hosts => ["http://elasticsearch:9200"]
-      index => "weather_station"
-      document_id => "%{bus_id}"
+      index => "stop_station"
+      document_id => "%{[stop_id]}"
     }
   } else {
     elasticsearch {
       hosts => ["http://elasticsearch:9200"]
       index => "default_topic"
-      document_id => "%{bus_id}"
     }
   }
 
