--- a/tests/Dockerfile
+++ b/tests/Dockerfile
@@ -10,6 +10,8 @@ RUN pip install elasticsearch
 RUN pip install requests
 RUN pip install protobuf
 RUN pip install gtfs-realtime-bindings
+RUN pip install pandas  
+RUN pip install numpy
 
 CMD ["bash"]
 
