--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,23 @@
 version: '3.6'
 services:
-  zookeeper:
-    image: confluentinc/cp-zookeeper:7.6.0
-    container_name: zookeeper
-    environment:
-      ZOOKEEPER_CLIENT_PORT: 2181
-      ZOOKEEPER_TICK_TIME: 2000
-    ports:
-      - '2181:2181'
-    networks:
-      - elk
-
   kafka:
-    image: confluentinc/cp-kafka:7.6.0
+    image: apache/kafka:4.2.0
     container_name: kafka
-    depends_on:
-      - zookeeper
     ports:
-      - '9092:9092'
+      - "2092:9092"
     environment:
-      KAFKA_BROKER_ID: 1
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092,PLAINTEXT_HOST://localhost:29092
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+      KAFKA_NODE_ID: 1
+      KAFKA_PROCESS_ROLES: broker,controller
+      KAFKA_LISTENERS: "PLAINTEXT://:19092,PLAINTEXT_HOST://:9092,CONTROLLER://:9093"
+      KAFKA_ADVERTISED_LISTENERS: "PLAINTEXT://kafka:19092,PLAINTEXT_HOST://localhost:29092"
       KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
+      KAFKA_CONTROLLER_LISTENER_NAMES: CONTROLLER
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: "CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT"
+      KAFKA_CONTROLLER_QUORUM_VOTERS: "1@kafka:9093"
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
+      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
+      KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
     networks:
       - elk
     healthcheck:
@@ -34,7 +27,7 @@ services:
       retries: 10
 
   Elasticsearch:
-    image: elasticsearch:7.16.2
+    image: elasticsearch:9.3.0
     container_name: elasticsearch
     restart: always
     volumes:
@@ -49,7 +42,7 @@ services:
       - elk
 
   Logstash:
-    image: logstash:7.16.2
+    image: logstash:9.3.0
     container_name: logstash
     restart: always
     volumes:
@@ -65,20 +58,20 @@ services:
       - elk
 
   Kibana:
-    image: kibana:7.16.2
+    image: kibana:9.3.0
     container_name: kibana
     restart: always
     # Remap 5601 -> 54321
     ports:
       - '54321:5601'
     environment:
-      - ELASTICSEARCH_URL=http://elasticsearch:9200
+      - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
     depends_on:
       - Elasticsearch
     networks:
       - elk
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:5601/api/status"]
+      test: ["CMD", "curl", "-f", "http://kibana:5601/api/status"]
       interval: 10s
       timeout: 5s
       retries: 10
