--- a/logstash/logstash.conf
+++ b/logstash/logstash.conf
@@ -1,6 +1,6 @@
 input {
   kafka {
-    bootstrap_servers => "kafka:9092"
+    bootstrap_servers => "kafka:19092"
     topics => ["bus","van","stop"]
   }
 }
@@ -14,30 +14,45 @@ filter {
 output {
   if [type] == "bus" {
     elasticsearch {
-      hosts => ["http://elasticsearch:9200"]
+      hosts => ["https://elasticsearch:9200"]
       index => "bus"
       document_id => "%{[bus_id]}"
+      user => "elastic"
+      password => "${ELASTIC_PASSWORD}"
+      ssl_enabled => true
+      ssl_certificate_authorities => ["/usr/share/logstash/config/certs/ca/ca.crt"]
     }
   } else if [type] == "van"{
     elasticsearch {
-      hosts => ["http://elasticsearch:9200"]
+      hosts => ["https://elasticsearch:9200"]
       index => "van"
       document_id => "%{[van_id]}"
+      user => "elastic"
+      password => "${ELASTIC_PASSWORD}"
+      ssl_enabled => true
+      ssl_certificate_authorities => ["/usr/share/logstash/config/certs/ca/ca.crt"]
     }
   } else if [type] == "stop_station" {
     elasticsearch {
-      hosts => ["http://elasticsearch:9200"]
+      hosts => ["https://elasticsearch:9200"]
       index => "stop_station"
       document_id => "%{[stop_id]}"
+      user => "elastic"
+      password => "${ELASTIC_PASSWORD}"
+      ssl_enabled => true
+      ssl_certificate_authorities => ["/usr/share/logstash/config/certs/ca/ca.crt"]
     }
   } else {
     elasticsearch {
-      hosts => ["http://elasticsearch:9200"]
+      hosts => ["https://elasticsearch:9200"]
       index => "default_topic"
+      user => "elastic"
+      password => "${ELASTIC_PASSWORD}"
+      ssl_enabled => true
+      ssl_certificate_authorities => ["/usr/share/logstash/config/certs/ca/ca.crt"]
     }
   }
 
-  stdout {
-    codec => rubydebug
-  }
+  stdout { codec => rubydebug }
 }
+
