updating version kafka and ELK

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -182,6 +182,7 @@ services:
       - certs:/certs:ro
     environment:
       - ELASTIC_PASSWORD=${ELASTIC_PASSWORD}
+      - KIBANA_PASSWORD=${KIBANA_PASSWORD}
     entrypoint: ["bash", "/conf/configure.sh"]
     restart: "no"
     networks:
